s3fuse (0.11) unstable; urgency=low

  * NEW: Added Google Storage support.
  * NEW: Changed required fields in s3fuse.conf. See README.
  * On rename, remove destination rather than failing with -EEXIST.
  * Improved error handling in FUSE init/pre-init.
  * Invalidate parent in directory cache when child is modified.
  * Fixed request error handling.
  * Increased default request timeout to 30 seconds (from 10).

 -- Tarick Bedeir <tarick@bedeir.com>  Wed, 13 Jul 2011 21:49:48 -0500

s3fuse (0.10) unstable; urgency=low

  * Updated usage/help message printed by main() to match arguments.
  * Added directory cache. 

 -- Tarick Bedeir <tarick@bedeir.com>  Thu, 30 Jun 2011 18:14:25 -0500

s3fuse (0.9) unstable; urgency=low

  * Moved to libxml++.

 -- Tarick Bedeir <tarick@bedeir.com>  Sun, 12 Jun 2011 17:43:26 -0500

s3fuse (0.1) unstable; urgency=low

  * Initial Release.

 -- Tarick Bedeir <tarick@bedeir.com>  Wed, 01 Jun 2011 17:06:31 -0500